# pages-2025

./: .editorconfig  .env.example  .gitignore  .mise.toml  .textlintrc.json  README.md  Taskfile.yaml  aqua.yaml  lefthook.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json5
.github/workflows/: deploy.yml  main.yml
contents/: 404.rst  about.rst  conf.py  index.rst  terms.rst
contents/_extra/: robots.txt
contents/_static/css/: custom.css
contents/_static/images/: .gitignore
contents/_static/js/: adjust-presentation.js
contents/_templates/: ablog.html  index.html  layout.html
contents/_templates/ablog/: catalog.html  collection.html  frontmatter.html  postnavy.html
contents/_templates/sidebar/: globaltoc.html  localtoc.html  navigation.html
contents/blog/: index.rst
contents/blog/2012/: buy-n3ds.rst  gto14th.rst  rainbow-01.rst  rainbow-02.rst  suparobo-event.rst
contents/blog/2014/: 2dk.rst  aaa-3.rst  android-sdk-license.rst  animax-musix-2014.rst  animesong-intro.rst  anisama-2014-1.rst  anisama-2014-2.rst  anisama-2014-3.rst  anisong-club-r-01.rst  brass-up-z.rst  develop-servers.rst  develop-twinkerer.rst  gto-16th.rst  install-alminium.rst  intro-meeting.rst  lldiver.rst  mag-cup-2nd.rst  neo-fantasia-tokyo.rst  neo-fantasia-yokohama.rst  opentouryou.rst  sanctuary.rst  set-upper.rst  sgap-fes.rst  use-atom-editor.rst  use-tinkerer.rst
contents/blog/2015/: amazon-video.rst  anicole21p.rst  anisong-club-r-02.rst  anisong-club-r-03.rst  bco2015.rst  codeiq39.rst  deck2pdf.rst  denpanews-2015-02.rst  developer-summit-2015-summer.rst  gto-17th.rst  july-tech-festa-2015.rst  macbook2015.rst  masami-okui-birth-live.rst  mba-to-next.rst  minori-chihara-symphonic.rst  mizonokuchi.rst  move-github.rst  new-macbook.rst  new-year.rst  quizdisplay-0-2.rst  quizdisplay-alpha.rst  review-live-2015.rst  review-tech-2015.rst  summer-dream-3.rst  sxt3rd.rst  teenage-mutant-ninja-turtles.rst  thank-you-pycon-jp.rst  ticket-recipt.rst  tomioka.rst  use-ga.rst  yapcasia-tokyo-2015.rst
contents/blog/2016/: deploy-to-netlify.rst  feedback-year.rst  konomeeting.rst  lisani-live.rst  macbook-has-been-frozen.rst  new-year-hackathon.rst  odessei.rst  repear-iphone6.rst
contents/blog/2017/: ambie.rst  chaincronicle.rst  errbot-cloudfront-1.rst  errbot-cloudfront-2.rst  errcron-0.4.4.rst  fix-errbot-pomodoro.rst  gitlab-meetup-tokyo-2.rst  playback2017.rst
contents/blog/2018/: ansible-night-201809.rst  ansible-night-201812.rst  archlinux-201805.rst  djangocontress-jp.rst  errbot-5-2.rst  errbot-watches-20180603.rst  (+11 more)
contents/notes/: index.rst
contents/works/: index.rst
src/pages/: __init__.py  custom404.py  disclosure.py  og_image.py  template_resolver.py
(+181 files in other folders)
