[project]
name = "pages-proto-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atsphinx-bulma",
    "atsphinx-footnotes>=0.2.0",
    "sphinx>=8.1.3",
]
license = "Apache-2.0"
classifiers = [
    "Private :: Do Not Upload"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "doc8>=1.1.2",
    "esbonio>=0.16.5",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "sphinx-autobuild>=2024.10.3",
]

[tool.uv.sources]
atsphinx-bulma = { path = "vendor/bulma", editable = true }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pages"]
