[project]
name = "pages-proto-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ablog>=0.11.12",
    "atsphinx-bulma>=0.2.2",
    "atsphinx-footnotes>=0.2.0",
    "atsphinx-goto-top>=0.1.2",
    "atsphinx-htmx-boost>=0.2.2",
    "atsphinx-toybox[lindera-search]>=2025.1.11",
    "cairosvg>=2.7.1",
    "click>=8.1.8",
    "oembedpy>=0.7.2",
    "sphinx-sitemap>=2.6.0",
    "sphinx>=8.1.3",
    "sphinxcontrib-mermaid>=1.0.0",
    "sphinxext-opengraph>=0.9.1",
    "sphinxnotes-strike>=1.2.1",
    "lxml>=5.3.0",
    "beautifulsoup4>=4.12.3",
    "ogpy>=0.1.0",
    "atsphinx-pagefind>=0.1.0",
    "pagefind[extended]>=1.3.0",
    "rst-package-refs>=0.1.0",
]
license = "Apache-2.0"
classifiers = [
    "Private :: Do Not Upload"
]

[project.scripts]
gen-og-image = "pages.og_image:main"

[project.optional-dependencies]
deploy = [
    "sphinx-last-updated-by-git>=0.3.8",
    "sphinxcontrib-gtagjs>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "doc8>=1.1.2",
    "docutils-ast-writer",
    "esbonio>=0.16.5",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "sphinx-autobuild>=2024.10.3",
    "ty>=0.0.1a17",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-docutils>=0.21.0.20241128",
]

[tool.uv.sources]
docutils-ast-writer = { url = "https://github.com/attakei-sandbox/docutils-ast-writer/archive/refs/heads/dev.zip" }

# NOTE: Uncoment it when I want to use local patch.
# [tool.uv.sources]
# atsphinx-bulma = { path = "vendor/bulma", editable = true }

[tool.doc8]
max-line-length = 119
ignore = ["D000", "D004"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pages"]

[tool.ruff]
extend-exclude = ["contents"]

[tool.ty.src]
exclude = ["contents"]
